--- a/MVC-SIS/MVC_SIS/Views/Student/Add.cshtml
+++ b/MVC-SIS/MVC_SIS/Views/Student/Add.cshtml
@@ -1,4 +1,4 @@
-﻿@model Exercises.Models.ViewModels.StudentVM
+﻿@model Exercises.Models.ViewModels.AddStudentViewModel
 
 @{
     ViewBag.Title = "Add";
@@ -10,44 +10,44 @@
     </div>
     <div class="col-xs-12 col-sm-9">
         <div class="row">
-            <div class="col-xs-12">
-                <h3>Add Student</h3>
-                <div class="row">
-                    @using (Html.BeginForm())
-                    {
-                        <div class="col-xs-12 col-sm-7">
-                            <div class="panel panel-primary">
-                                <div class="panel-heading">
-                                    <h4 class="panel-title">Personal Details</h4>
-                                </div>
-                                <div class="panel-body">
-                                    <div class="form-group">
-                                        <label>First Name:</label>
-                                        @Html.TextBoxFor(m => m.Student.FirstName, new { @class = "form-control" })
-                                    </div>
-                                    <div class="form-group">
-                                        <label>Last Name:</label>
-                                        @Html.TextBoxFor(m => m.Student.LastName, new { @class = "form-control" })
-                                    </div>
-                                    <div class="form-group">
-                                        <label>Major:</label>
-                                        @Html.DropDownListFor(m => m.Student.Major.MajorId, Model.MajorItems, "-Choose One-", new { @class = "form-control" })
-                                    </div>
-                                    <div class="form-group">
-                                        <label>GPA:</label>
-                                        @Html.TextBoxFor(m => m.Student.GPA, new { @class = "form-control" })
-                                    </div>
-                                    <h4>Courses</h4>
-                                    <div class="form-group">
-                                        @Html.ListBoxFor(m => m.SelectedCourseIds, Model.CourseItems, new { @class = "form-control" })
-                                    </div>
-                                    <button class="btn btn-primary">Save</button>
-                                </div>
-                            </div>
-                        </div>
-                    }
-                </div>
-            </div>
+			<div class="col-xs-12">
+				<h3>Add Student</h3>
+				<div class="row">
+					@using (Html.BeginForm())
+					{
+						<div class="col-xs-12 col-sm-7">
+							<div class="panel panel-primary">
+								<div class="panel-heading">
+									<h4 class="panel-title">Personal Details</h4>
+								</div>
+								<div class="panel-body">
+									<div class="form-group">
+										<label>First Name:</label>
+										@Html.TextBoxFor(m => m.FirstName, new { @class = "form-control" })
+									</div>
+									<div class="form-group">
+										<label>Last Name:</label>
+										@Html.TextBoxFor(m => m.LastName, new { @class = "form-control" })
+									</div>
+									<div class="form-group">
+										<label>Major:</label>
+										@Html.DropDownListFor(m => m.MajorId, Model.MajorItems, "-Choose One-", new { @class = "form-control" })
+									</div>
+									<div class="form-group">
+										<label>GPA:</label>
+										@Html.TextBoxFor(m => m.GPA, new { @class = "form-control" })
+									</div>
+									<h4>Courses</h4>
+									<div class="form-group">
+										@Html.ListBoxFor(m => m.SelectedCourseId, Model.CourseItems, new { @class = "form-control" })
+									</div>
+									<button class="btn btn-primary">Save</button>
+								</div>
+							</div>
+						</div>
+					}
+				</div>
+			</div>
         </div>
     </div>
 </div>
