--- a/MVC-SIS/MVC_SIS/Views/Student/Edit.cshtml
+++ b/MVC-SIS/MVC_SIS/Views/Student/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Exercises.Models.Data.Student
+﻿@model Exercises.Models.ViewModels.EditStudentViewModel
 @{
 	ViewBag.Title = "Edit";
 }
@@ -6,6 +6,8 @@
 <div class="row">
 	<div class="col-xs-12">
 		<h2>Edit Student</h2>
+		@Html.ValidationSummary()
+
 		@Html.ActionLink("Return to List", "List", "Student")
 	</div>
 </div>
@@ -13,42 +15,47 @@
 	<div>
 		@using (Html.BeginForm())
 		{
-			@Html.HiddenFor(m => m.StudentId);
+			@Html.HiddenFor(m => m.Student.StudentId)
 
-			<div class="form-group; col-sm-6">
-				<label>First Name</label>
-				@Html.TextBoxFor(m => m.FirstName, new { @class = "form-control", placeholder = "First Name" })
+		<div class="form-group; col-sm-6">
+			<label>First Name</label>
+			@Html.TextBoxFor(m => m.FirstName, new { @class = "form-control", placeholder = "First Name" })
 
-				<label>Last Name</label>
-				@Html.TextBoxFor(m => m.LastName, new { @class = "form-control", placeholder = "Last Name" })
+			<label>Last Name</label>
+			@Html.TextBoxFor(m => m.LastName, new { @class = "form-control", placeholder = "Last Name" })
 
-				<label>Major</label>
-				@Html.TextBoxFor(m => m.Major.MajorName, new { @class = "form-control", placeholder = "Major" })
-
-				<label>GPA</label>
-				@Html.TextBoxFor(m => m.GPA, new { @class = "form-control", placeholder = "GPA" })
-
-
+			<div class="form-group">
+				<label>Major:</label>
+				@Html.DropDownListFor(m => m.MajorId, Model.MajorItems, "-Choose One-", new { @class = "form-control" })
 			</div>
+
+			<label>GPA</label>
+			@Html.TextBoxFor(m => m.GPA, new { @class = "form-control", placeholder = "GPA" })
+
+			<h4>Courses</h4>
+			<div class="form-group">
+				@Html.ListBoxFor(m => m.SelectedCourseId, new MultiSelectList(Model.CourseItems, "Value", "Text"), new { @class = "form-control" })
+			</div>
+		</div>
 			<div class="form-group; col-sm-6">
 
 				<label>Street 1</label>
-				@Html.TextBoxFor(m => m.Address.Street1, new { @class = "form-control", placeholder = "Street1" })
+				@Html.TextBoxFor(m => m.Street1, new { @class = "form-control", placeholder = "Street1" })
 
 				<label>Street 2</label>
-				@Html.TextBoxFor(m => m.Address.Street2, new { @class = "form-control", placeholder = "Street2" })
+				@Html.TextBoxFor(m => m.Street2, new { @class = "form-control", placeholder = "Street2" })
 
 				<label>City</label>
-				@Html.TextBoxFor(m => m.Address.City, new { @class = "form-control", placeholder = "City" })
+				@Html.TextBoxFor(m => m.City, new { @class = "form-control", placeholder = "City" })
 
 				<label>State Name</label>
-				@Html.TextBoxFor(m => m.Address.State.StateName, new { @class = "form-control", placeholder = "State Name" })
+				@Html.TextBoxFor(m => m.StateName, new { @class = "form-control", placeholder = "State Name" })
 
 				<label>State Abbreviation</label>
-				@Html.TextBoxFor(m => m.Address.State.StateAbbreviation, new { @class = "form-control", placeholder = "State Abbreviation" })
+				@Html.TextBoxFor(m => m.StateAbbreviation, new { @class = "form-control", placeholder = "State Abbreviation" })
 
 				<label>Postal Code</label>
-				@Html.TextBoxFor(m => m.Address.PostalCode, new { @class = "form-control", placeholder = "Postal Code" })
+				@Html.TextBoxFor(m => m.PostalCode, new { @class = "form-control", placeholder = "Postal Code" })
 			</div>
 
 			<button type="submit" class="btn btn-sm btn-primary">Save</button>
