--- a/Cap/Cap.UI/CarDealership.UI/Views/Shared/_Layout.cshtml
+++ b/Cap/Cap.UI/CarDealership.UI/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
 					<li class="nav-item">@Html.ActionLink("New Inventory", "New", "Inventory", null, new { @class = "nav-link" })</li>
 					<li class="nav-item">@Html.ActionLink("Used Inventory", "Used", "Inventory", null, new { @class = "nav-link" })</li>
 					<li class="nav-item">@Html.ActionLink("Specials", "Specials", "Home", null, new { @class = "nav-link" })</li>
-					<li class="nav-item">@Html.ActionLink("Contact", "Contact", "Home", null, new { @class = "nav-link" })</li>
+					<li class="nav-item">@Html.ActionLink("Contact", "Index", "ContactUs", null, new { @class = "nav-link" })</li>
 				</ul>
 
 				<ul class="nav navbar-nav navbar-right mr-auto">
