--- a/Cap/Cap.UI/CarDealership.UI/Content/Site.css
+++ b/Cap/Cap.UI/CarDealership.UI/Content/Site.css
@@ -16,11 +16,8 @@
     white-space: normal;
 }
 
-/* Set width on the form input elements since they're 100% wide by default */
-input,
-select,
-textarea {
-    max-width: 280px;
+input, textarea {
+	max-width: 240px;
 }
 
 .square {
@@ -149,4 +146,52 @@ margin: auto;
 
 	font-size: smaller;
 	line-height: .5;
+}
+
+.sales-border {
+	border: 1px solid black;
+	padding-bottom: 3%;
+	padding-top: 3%;
+}
+.sales-type-dropdown {
+	padding: 0px 5px 0px 15px;
+	max-width: 200px;
+	margin-right: auto;
+}
+
+.sales-state-dropdown {
+	padding: 0px 5px 0px 15px;
+	max-width: 125px;
+	margin-right: auto;
+}
+
+.admin-add-link {
+  margin-bottom: 1%;
+}
+
+.admin-header {
+	margin-bottom: 1%;
+}
+.vehicle-label {
+
+	font-weight: bold; 
+}
+
+.make-border{
+	border: 1px solid black;
+}
+
+.make-header {
+	margin-bottom: 3%;
+	margin-top: 3%;
+}
+
+.make-name {
+margin-bottom: 3%
+}
+.model-add-bar{
+	margin-left:auto;
+	margin-right: auto;
+	text-align: center;
+
 }
