--- a/Cap/Cap.UI/CarDealership.UI/Views/ContactUs/Index.cshtml
+++ b/Cap/Cap.UI/CarDealership.UI/Views/ContactUs/Index.cshtml
@@ -15,19 +15,19 @@
 
 		<div class="form-group">
 			<label>Name:</label>
-			@Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
+			@Html.TextBoxFor(m => m.Name, new { @class = "form-control", required = "required" })
 		</div>
 		<div class="form-group">
 			<label>Email:</label>
-			@Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+			@Html.TextBoxFor(m => m.Email, new { @class = "form-control", required = "required", type="email"})
 		</div>
 		<div class="form-group">
 			<label>Phone:</label>
-			@Html.TextBoxFor(m => m.Phone, new { @class = "form-control" })
+			@Html.TextBoxFor(m => m.Phone, new { @class = "form-control", required = "required", type="tel" })
 		</div>
 		<div class="form-group">
 			<label>Message:</label>
-			@Html.TextAreaFor(m => m.Message, new {id = "message", @class = "form-control" })
+			@Html.TextAreaFor(m => m.Message, new {id = "message", @class = "form-control", required = "required" })
 		</div>
 
 			<button type="submit" class="btn btn-dark">Submit</button>
@@ -53,7 +53,7 @@
 		$(document).ready(function () {
 			var VIN = '@ViewBag.VIN';
 
-			if (VIN !== null) {
+			if (VIN.length > 0) {
 				$('#message').val('VIN #: ' + VIN + " - ");
 			}
 			});
