--- a/Cap/Cap.UI/CarDealership.UI/Views/Inventory/New.cshtml
+++ b/Cap/Cap.UI/CarDealership.UI/Views/Inventory/New.cshtml
@@ -10,7 +10,7 @@
 		</div>
 	</div>
 
-	@using (Html.BeginForm(null, null, FormMethod.Post, new { @class = "form-horizontal", id="search-form"}))
+	@using (Html.BeginForm(null, null, FormMethod.Post, new { @class = "form-horizontal", id = "search-form" }))
 	{
 		<div class="row outline-top">
 			<div class="col-xs-12">
@@ -20,7 +20,7 @@
 		<div class="row outline-middle">
 
 			<div class="col-md-3 col-sm-12">
-				<input type="text" class="form-control" id="search-term" placeholder="Enter make, model or year" required>
+				<input type="text" class="form-control" id="search-term" placeholder="Enter make, model or year">
 			</div>
 			<div class="col-md-1 col-sm-4 inventory-label">
 				<label for="min-price"><strong>Price</strong></label>
@@ -30,7 +30,7 @@
 			</div>
 
 			<div class="col-md-2 col-sm-4 inventory-dropdown">
-				@Html.DropDownList("max-price", Model.Price, "No Max", new { @class = "form-control"})
+				@Html.DropDownList("max-price", Model.Price, "No Max", new { @class = "form-control" })
 			</div>
 			<div class="col-md-1 col-sm-4 inventory-label">
 				<label for="min-price"><strong>Year</strong></label>
@@ -42,8 +42,8 @@
 			<div class="col-md-2 col-sm-4 inventory-dropdown">
 				@Html.DropDownList("max-year", Model.Year, "No Max", new { @class = "form-control" })
 			</div>
-
 		</div>
+
 		<div class="row outline-bottom">
 			<div class="col-md-12 center-block">
 				<button type="submit" id="search-button" class="btn btn-dark">Search</button>
@@ -53,12 +53,13 @@
 
 	<div class="col-xs-12 inventory-results-header" id="results-header">
 		<h2>Search Results</h2>
+		<br />
 	</div>
 
-	@foreach (var vehicle in Model.Vehicles)
-	{
-		<br />
-		<div id="search-results">
+	<div id="search-results">
+		@foreach (var vehicle in Model.Vehicles)
+		{
+			<br />
 			<div class="row vehicleTitle">
 				<div class="col-xs-12" id="contentRow">
 					<strong><p>@vehicle.Year @vehicle.MakeName @vehicle.ModelName</p></strong>
@@ -81,11 +82,11 @@
 				<div class="col-md-3 searchResultsCell" id="contentRow">
 					<p><strong>Sale Price:</strong> @vehicle.SalePrice.ToString("C0")</p>
 					<p><strong>MSRP:</strong> @vehicle.MSRP.ToString("C0")</p>
-					<button type="button" onclick="location.href='@Url.Action("details", "inventory", new { id=vehicle.VehicleId})'"  class="btn btn-dark">Details</button>
+					<button type="button" onclick="location.href='@Url.Action("details", "inventory", new { id=vehicle.VehicleId})'" class="btn btn-dark">Details</button>
 				</div>
 			</div>
-		</div>
-	}
+		}
+	</div>
 </div>
 
 @section Scripts
