--- a/Cap/Cap.UI/CarDealership.UI/Views/Inventory/Used.cshtml
+++ b/Cap/Cap.UI/CarDealership.UI/Views/Inventory/Used.cshtml
@@ -20,7 +20,7 @@
 		<div class="row outline-middle">
 
 			<div class="col-md-3 col-sm-12">
-				<input type="text" class="form-control" id="search-term" placeholder="Enter make, model or year" required>
+				<input type="text" class="form-control" id="search-term" placeholder="Enter make, model or year" >
 			</div>
 			<div class="col-md-1 col-sm-4 inventory-label">
 				<label for="min-price"><strong>Price</strong></label>
