--- a/Cap/Cap.UI/CarDealership.UI/Views/Reports/Inventory.cshtml
+++ b/Cap/Cap.UI/CarDealership.UI/Views/Reports/Inventory.cshtml
@@ -35,7 +35,7 @@
 					<td>@vehicle.MakeName</td>
 					<td>@vehicle.ModelName</td>
 					<td>@vehicle.Count</td>
-					<td>@vehicle.StockValue</td>
+					<td>@vehicle.StockValue.ToString("C0")</td>
 				</tr>
 				}
 			</tbody>
@@ -70,7 +70,7 @@
 					<td>@vehicle.MakeName</td>
 					<td>@vehicle.ModelName</td>
 					<td>@vehicle.Count</td>
-					<td>@vehicle.StockValue</td>
+					<td>@vehicle.StockValue.ToString("C0")</td>
 
 				</tr>
 				}
