--- a/Cap/Cap.UI/CarDealership.UI/Views/Admin/AddUser.cshtml
+++ b/Cap/Cap.UI/CarDealership.UI/Views/Admin/AddUser.cshtml
@@ -42,11 +42,11 @@
 	<div class="row">
 		<div class=" col-4 form-group">
 			<label>Password</label>
-			@Html.TextBoxFor(m => m.User.PasswordHash, new { id="password", @class = "form-control", required = "required" })
+			@Html.TextBoxFor(m => m.User.PasswordHash, new { id="password", @class = "form-control", required = "required", type="password"})
 		</div>
 		<div class="col-4 form-group">
 			<label>Confirm Password</label>
-			@Html.TextBoxFor(m => m.User.PasswordHash, new { id="cfmPassword", @class = "form-control", required = "required" })
+			@Html.TextBoxFor(m => m.User.PasswordHash, new { id="cfmPassword", @class = "form-control", required = "required", type="password"})
 		</div>
 		<div class="col-4 form-group">
 
