--- a/Cap/Cap.UI/CarDealership.UI/Views/Sales/Index.cshtml
+++ b/Cap/Cap.UI/CarDealership.UI/Views/Sales/Index.cshtml
@@ -23,7 +23,7 @@
 		<div class="row outline-middle">
 
 			<div class="col-md-3 col-sm-12">
-				<input type="text" class="form-control" id="search-term" placeholder="Enter make, model or year" required>
+				<input type="text" class="form-control" id="search-term" placeholder="Enter make, model or year" >
 			</div>
 			<div class="col-md-1 col-sm-4 inventory-label">
 				<label for="min-price"><strong>Price</strong></label>
@@ -60,35 +60,7 @@
 	</div>
 	<div id="search-results">
 
-		@foreach (var vehicle in Model.Vehicles)
-		{
-			<br />
-			<div class="row vehicleTitle">
-				<div class="col-xs-12" id="contentRow">
-					<strong><p>@vehicle.Year @vehicle.MakeName @vehicle.ModelName</p></strong>
-				</div>
-			</div>
-			<div class="row vehicleSearchResult">
-				<div class="col-md-3" id="contentRow">
-					<img class="center-block" src="@Url.Content("~/Images/" + vehicle.PhotoPath)" />
-				</div>
-				<div class="col-md-3 searchResultsCell" id="contentRow">
-					<p><strong>Body Style:</strong> @vehicle.BodyType </p>
-					<p><strong>Trans:</strong> @vehicle.TransmissionType</p>
-					<p><strong>Color:</strong> @vehicle.ColorName</p>
-				</div>
-				<div class="col-md-3 searchResultsCell" id="contentRow">
-					<p><strong>Interior:</strong> @vehicle.InteriorColor</p>
-					<p><strong>Mileage:</strong>  @vehicle.TypeName</p>
-					<p><strong>VIN #:</strong> @vehicle.VIN</p>
-				</div>
-				<div class="col-md-3 searchResultsCell" id="contentRow">
-					<p><strong>Sale Price:</strong> @vehicle.SalePrice.ToString("C0")</p>
-					<p><strong>MSRP:</strong> @vehicle.MSRP.ToString("C0")</p>
-					<button type="button" onclick="location.href='@Url.Action("purchase", "sales", new { id=vehicle.VehicleId})'" class="btn btn-dark">Purchase</button>
-				</div>
-			</div>
-		}
+		
 	</div>
 </div>
 
@@ -120,35 +92,36 @@
 					var imagePath = '@Url.Content("~/Images/")';					
 
 					$.each(results, function (index, vehicle) {
-						
-						var html =
-							'<div class="row vehicleTitle">' +
-							'<div class="col-xs-12" id="contentRow">' +
-							'<strong><p>' + vehicle.Year + ' ' + vehicle.MakeName + ' ' + vehicle.ModelName + '</p></strong>' +
-							'</div>' +
-							'</div>' +
-							'<div class="row vehicleSearchResult">' +
-							'<div class="col-md-3" id="contentRow">' +
-							'<img class="center-block" src="' + imagePath + vehicle.PhotoPath + '")/>' +
-							'</div>' +
-						'<div class="col-md-3 searchResultsCell" id="contentRow">' +
-							'<p><strong>Body Style:</strong> ' + vehicle.BodyType + ' </p>' +
-							'<p><strong>Trans:</strong> ' + vehicle.TransmissionType + '</p>' +
-							'<p><strong>Color:</strong> ' + vehicle.ColorName + '</p>' +
-							'</div> ' +
-							'<div class="col-md-3 searchResultsCell" id="contentRow">' +
-							'<p><strong>Interior:</strong> ' + vehicle.InteriorColor + '</p>' +
-							'<p><strong>Mileage:</strong> ' + vehicle.TypeName + '</p>' +
-							'<p><strong>VIN #:</strong> ' + vehicle.VIN + '</p>' +
-							'</div>' +
-							'<div class="col-md-3 searchResultsCell" id="contentRow">' +
-							'<p><strong>Sale Price:</strong> $' + vehicle.SalePrice.toFixed(0).replace(/(\d)(?=(\d\d\d)+(?!\d))/g, "$1,") + ' </p>' +
-							'<p><strong>MSRP:</strong> $' + vehicle.MSRP.toFixed(0).replace(/(\d)(?=(\d\d\d)+(?!\d))/g, "$1,") + '</p>' +
-							'<button type="button" onclick="location.href=\'/sales/purchase/'  + vehicle.VehicleId + '\'" class="btn btn-dark">Purchase</button>' +
-							'</div>' +
-							'</div> <br/>';
+					
+							var html =
+								'<div class="row vehicleTitle">' +
+								'<div class="col-xs-12" id="contentRow">' +
+								'<strong><p>' + vehicle.Year + ' ' + vehicle.MakeName + ' ' + vehicle.ModelName + '</p></strong>' +
+								'</div>' +
+								'</div>' +
+								'<div class="row vehicleSearchResult">' +
+								'<div class="col-md-3" id="contentRow">' +
+								'<img class="center-block" src="' + imagePath + vehicle.PhotoPath + '")/>' +
+								'</div>' +
+								'<div class="col-md-3 searchResultsCell" id="contentRow">' +
+								'<p><strong>Body Style:</strong> ' + vehicle.BodyType + ' </p>' +
+								'<p><strong>Trans:</strong> ' + vehicle.TransmissionType + '</p>' +
+								'<p><strong>Color:</strong> ' + vehicle.ColorName + '</p>' +
+								'</div> ' +
+								'<div class="col-md-3 searchResultsCell" id="contentRow">' +
+								'<p><strong>Interior:</strong> ' + vehicle.InteriorColor + '</p>' +
+								'<p><strong>Mileage:</strong> ' + vehicle.TypeName + '</p>' +
+								'<p><strong>VIN #:</strong> ' + vehicle.VIN + '</p>' +
+								'</div>' +
+								'<div class="col-md-3 searchResultsCell" id="contentRow">' +
+								'<p><strong>Sale Price:</strong> $' + vehicle.SalePrice.toFixed(0).replace(/(\d)(?=(\d\d\d)+(?!\d))/g, "$1,") + ' </p>' +
+								'<p><strong>MSRP:</strong> $' + vehicle.MSRP.toFixed(0).replace(/(\d)(?=(\d\d\d)+(?!\d))/g, "$1,") + '</p>' +
+								'<button type="button" onclick="location.href=\'/sales/purchase/' + vehicle.VehicleId + '\'" class="btn btn-dark">Purchase</button>' +
+								'</div>' +
+								'</div> <br/>';
 
-						$('#search-results').append(html.toString());
+							$('#search-results').append(html.toString());
+						
 					});
 				},
 				error: function () {
