--- a/Cap/Cap.UI/CarDealership.UI/Views/ContactUs/Index.cshtml
+++ b/Cap/Cap.UI/CarDealership.UI/Views/ContactUs/Index.cshtml
@@ -19,11 +19,11 @@
 		</div>
 		<div class="form-group">
 			<label>Email:</label>
-			@Html.TextBoxFor(m => m.Email, new { @class = "form-control", required = "required", type="email"})
+			@Html.TextBoxFor(m => m.Email, new { @class = "form-control", type="email"})
 		</div>
 		<div class="form-group">
 			<label>Phone:</label>
-			@Html.TextBoxFor(m => m.Phone, new { @class = "form-control", required = "required", type="tel" })
+			@Html.TextBoxFor(m => m.Phone, new { @class = "form-control", type="tel" })
 		</div>
 		<div class="form-group">
 			<label>Message:</label>
