--- a/Cap/Cap.UI/CarDealership.UI/Views/Shared/_Layout.cshtml
+++ b/Cap/Cap.UI/CarDealership.UI/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
 					{
 						<li class="nav-item">@Html.ActionLink("Sales", "Index", "Sales", null, new { @class = "nav-link" })</li>
 					}
-					@if (User.Identity.IsAuthenticated && User.IsInRole("admin"))
+					@if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
 					{
 						<li class="nav-item">@Html.ActionLink("Sales", "Index", "Sales", null, new { @class = "nav-link" })</li>
 						<li class="nav-item">@Html.ActionLink("Admin", "Index", "Admin", null, new { @class = "nav-link" })</li>
