--- a/Cap/Cap.UI/CarDealership.UI/Views/Home/Index.cshtml
+++ b/Cap/Cap.UI/CarDealership.UI/Views/Home/Index.cshtml
@@ -8,7 +8,8 @@
 
 				ViewBag.Title = "Home Page";
 }
-
+@if (Model.Specials.Count != 0)
+{
 <div class="carousel slide" data-ride="carousel">
 	<div class="carousel-inner">
 		<div class="carousel-item active">
@@ -31,7 +32,7 @@
 		}
 	</div>
 </div>
-
+}
 <hr />
 @if (Model.Featured != null)
 {
